tests/ui/const-generics/associated-const-bindings/dyn-compat-self-const-projections-in-assoc-const-ty.stderr
error[E0277]: the trait bound `FreshTy(0): A` is not satisfied
  --> $DIR/dyn-compat-self-const-projections-in-assoc-const-ty.rs:32:33
   |
LL |     let _: dyn A<Ty = i32, CT = 0>;
   |                                 ^ the trait `A` is not implemented for `FreshTy(0)`
   |
help: the trait `A` is implemented for `()`
  --> $DIR/dyn-compat-self-const-projections-in-assoc-const-ty.rs:20:1
   |
LL | impl A for () {
   | ^^^^^^^^^^^^^

error[E0277]: the trait bound `FreshTy(0): A` is not satisfied
  --> $DIR/dyn-compat-self-const-projections-in-assoc-const-ty.rs:34:34
   |
LL |     let _: &dyn A<Ty = i32, CT = 0> = &();
   |                                  ^ the trait `A` is not implemented for `FreshTy(0)`
   |
help: the trait `A` is implemented for `()`
  --> $DIR/dyn-compat-self-const-projections-in-assoc-const-ty.rs:20:1
   |
LL | impl A for () {
   | ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
